# retail-sage

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
agent/: __init__.py  agent.py  benchmark.py  context.py  datasources.py  memory.py  prompts.py  tools.py
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/marts/metrics/: customer_ltv.sql  daily_channel_summary.sql
dbt/models/marts/retail/: dim_customer.sql  dim_date.sql  dim_item.sql  dim_store.sql  fct_returns.sql  fct_sales.sql
dbt/models/staging/: _sources.yml  _stg_tpcds.yml  stg_tpcds__call_center.sql  stg_tpcds__catalog_page.sql  stg_tpcds__catalog_returns.sql  stg_tpcds__catalog_sales.sql  stg_tpcds__customer.sql  stg_tpcds__customer_address.sql  stg_tpcds__customer_demographics.sql  stg_tpcds__date_dim.sql  stg_tpcds__household_demographics.sql  stg_tpcds__income_band.sql  stg_tpcds__inventory.sql  stg_tpcds__item.sql  stg_tpcds__promotion.sql  stg_tpcds__reason.sql  stg_tpcds__ship_mode.sql  stg_tpcds__store.sql  stg_tpcds__store_returns.sql  stg_tpcds__store_sales.sql  stg_tpcds__time_dim.sql  stg_tpcds__warehouse.sql  stg_tpcds__web_page.sql  stg_tpcds__web_returns.sql  stg_tpcds__web_sales.sql  stg_tpcds__web_site.sql
dbt/semantic_models/: channel_metrics.yml  customer_metrics.yml  inventory_metrics.yml  sales_metrics.yml
scripts/: 01_generate_data.py  02_export_parquet.py  03_verify_data.py  04_seed_memory.py  05_run_benchmark.py  06_generate_huggingface.py  07_seed_huggingface_memory.py
tests/: test_agent.py  test_memory.py  test_tools.py
ui/: app.py
